; ModuleID = '/home/carl/AnghaBench/linux/drivers/uio/extr_uio_netx.c_netx_pci_remove.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/uio/extr_uio_netx.c_netx_pci_remove.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pci_dev = type { i32 }
%struct.uio_info = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i64 }

@DPM_HOST_INT_EN0 = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.pci_dev*)* @netx_pci_remove to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @netx_pci_remove(%struct.pci_dev* %0) #0 {
  %2 = alloca %struct.pci_dev*, align 8
  %3 = alloca %struct.uio_info*, align 8
  store %struct.pci_dev* %0, %struct.pci_dev** %2, align 8
  %4 = load %struct.pci_dev*, %struct.pci_dev** %2, align 8
  %5 = call %struct.uio_info* @pci_get_drvdata(%struct.pci_dev* %4)
  store %struct.uio_info* %5, %struct.uio_info** %3, align 8
  %6 = load %struct.uio_info*, %struct.uio_info** %3, align 8
  %7 = getelementptr inbounds %struct.uio_info, %struct.uio_info* %6, i32 0, i32 0
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i64 0
  %10 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = load i64, i64* @DPM_HOST_INT_EN0, align 8
  %13 = add nsw i64 %11, %12
  %14 = call i32 @iowrite32(i32 0, i64 %13)
  %15 = load %struct.uio_info*, %struct.uio_info** %3, align 8
  %16 = call i32 @uio_unregister_device(%struct.uio_info* %15)
  %17 = load %struct.pci_dev*, %struct.pci_dev** %2, align 8
  %18 = call i32 @pci_release_regions(%struct.pci_dev* %17)
  %19 = load %struct.pci_dev*, %struct.pci_dev** %2, align 8
  %20 = call i32 @pci_disable_device(%struct.pci_dev* %19)
  %21 = load %struct.uio_info*, %struct.uio_info** %3, align 8
  %22 = getelementptr inbounds %struct.uio_info, %struct.uio_info* %21, i32 0, i32 0
  %23 = load %struct.TYPE_2__*, %struct.TYPE_2__** %22, align 8
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i64 0
  %25 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %24, i32 0, i32 0
  %26 = load i64, i64* %25, align 8
  %27 = call i32 @iounmap(i64 %26)
  %28 = load %struct.uio_info*, %struct.uio_info** %3, align 8
  %29 = call i32 @kfree(%struct.uio_info* %28)
  ret void
}

declare dso_local %struct.uio_info* @pci_get_drvdata(%struct.pci_dev*) #1

declare dso_local i32 @iowrite32(i32, i64) #1

declare dso_local i32 @uio_unregister_device(%struct.uio_info*) #1

declare dso_local i32 @pci_release_regions(%struct.pci_dev*) #1

declare dso_local i32 @pci_disable_device(%struct.pci_dev*) #1

declare dso_local i32 @iounmap(i64) #1

declare dso_local i32 @kfree(%struct.uio_info*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
